[gd_scene load_steps=22 format=3 uid="uid://b31mt4qpb60kt"]

[ext_resource type="Script" path="res://scripts/inventory/Purification_Rod.gd" id="1_o1oos"]
[ext_resource type="Texture2D" uid="uid://cvif0fd1jwjle" path="res://sprites/items/item_spawnables/star_animation.png" id="2_3scuj"]
[ext_resource type="Texture2D" uid="uid://dbojwj5n2wnx7" path="res://sprites/items/item_spawnables/star_glow.png" id="3_4xo6v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q7sg0"]
atlas = ExtResource("2_3scuj")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqe0s"]
atlas = ExtResource("2_3scuj")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaas7"]
atlas = ExtResource("2_3scuj")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5na4"]
atlas = ExtResource("2_3scuj")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2at2"]
atlas = ExtResource("2_3scuj")
region = Rect2(0, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b1hb"]
atlas = ExtResource("2_3scuj")
region = Rect2(30, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r3k6"]
atlas = ExtResource("2_3scuj")
region = Rect2(60, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pp88"]
atlas = ExtResource("2_3scuj")
region = Rect2(90, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6yh7"]
atlas = ExtResource("2_3scuj")
region = Rect2(0, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltiam"]
atlas = ExtResource("2_3scuj")
region = Rect2(30, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr1dc"]
atlas = ExtResource("2_3scuj")
region = Rect2(60, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0in6c"]
atlas = ExtResource("2_3scuj")
region = Rect2(90, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrkf5"]
atlas = ExtResource("2_3scuj")
region = Rect2(0, 90, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl55r"]
atlas = ExtResource("2_3scuj")
region = Rect2(30, 90, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtmo0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7sg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqe0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaas7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5na4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2at2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b1hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r3k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pp88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6yh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltiam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr1dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0in6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrkf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl55r")
}],
"loop": false,
"name": &"default",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s2u7"]
size = Vector2(22, 22)

[sub_resource type="Animation" id="Animation_omq0b"]
resource_name = "glow"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/StarGlow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body/StarGlow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body/Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main_body/Area2D:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("main_body/AnimatedSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvy6u"]
_data = {
"glow": SubResource("Animation_omq0b")
}

[node name="Purification_Rod" type="Node2D"]
texture_filter = 1
script = ExtResource("1_o1oos")

[node name="main_body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="main_body"]
sprite_frames = SubResource("SpriteFrames_xtmo0")
autoplay = "default"

[node name="StarGlow" type="Sprite2D" parent="main_body"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(1, 1)
texture = ExtResource("3_4xo6v")

[node name="Area2D" type="Area2D" parent="main_body"]
collision_layer = 8
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/Area2D"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_2s2u7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hvy6u")
}

[connection signal="animation_finished" from="main_body/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="main_body/Area2D" to="." method="_on_area_2d_body_entered"]
